apps/cyberchef/overlays/prod/ingress-route-ext.yaml
kind: IngressRoute
apiVersion: traefik.io/v1alpha1
metadata:
  name: cyberchef-ingress-ext
  namespace: cyberchef
spec:
  entryPoints:
    - websecure-ext
  routes:
    - match: Host(`cyberchef.sobrinho.pt`)
      kind: Rule
      middlewares:
        - name: middleware-auth-forward
          namespace: traefik
      services:
        - name: cyberchef
          port: main
