apps/cyberchef/overlays/prod/ingress-route.yml
kind: IngressRoute
apiVersion: traefik.io/v1alpha1
metadata:
  name: cyberchef-ingress
  namespace: cyberchef

spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`cyberchef.sobrinho.pt`)
      kind: Rule
      services:
        - name: cyberchef
          port: main
